# winutilz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/ImageDither/: CMakeLists.txt  main.c
examples/NekoWallpaper/: CMakeLists.txt  main.c
include/: winutilz.h
src/: .gitignore  CMakeLists.txt  branding.c  capture.c  clipboard.c  colors.c  cursor.c  image.c  inputbox.c  internal.c  internal.h  internet.c  misc.c  power.c  process.c  resource.c  shell.c  strconv.c  strconv.h  syscolors.c  undoc.c  undoc.h  version.c  version.h.in  wallpaper.c  window.c  winutilz.rc.in
